grammar.js
    program: $ => seq(
      repeat(
        seq(
          $.statement,
          ';',
        ),
      ),
      optional(
        $.statement,
      )
    ),

    statement: $ => choice(
      $._select_statement_elevated,
      $.drop,
    ),

    _select_statement_elevated: $ => seq(
      alias($._select_elevated, $.select),
      optional($.into),
      optional($.from),
      optional($.for_update),
      optional(
        seq(
          $.union,
          $._select_statement,
        )
      ),
    ),

    select: $ => seq(
      $.keyword_select,
      $.select_expression,
    ),

    select_expression: $ => comma_list(
      seq(
        optional(
          any_order(
            optional($.keyword_distinct),
            optional($.top_statement),
          )
        ),
        $.term,
      ),
      true
    ),


    from: $ => seq(
      $.keyword_from,
      comma_list($.relation, true),
      repeat(
        $.join
      ),
      optional($.where),
      optional($.group_by),
      optional($.order_by),
      optional($.totals_expression),
    ),

    where: $ => seq(
      $.keyword_where,
      field("predicate", $._expression),
    ),

    relation: $ => prec.right(
      seq(
        choice(
          $.subquery,
          $.invocation,
          $.object_reference,
        ),
        optional(
          $._alias,
        ),
      ),
    ),

    term: $ => seq(
      field(
        'value',
        choice(
          $.all_fields,
          $._expression,
        ),
      ),
      optional($._alias),
    ),

    _alias: $ => seq(
      optional($.keyword_as),
      field('alias', $.identifier),
    ),

    _expression: $ => prec(1,
      choice(
        $.literal,
        $.field,
        $.parameter,
        $.case,
        //TODO remove subqery, it's not allowed in most cases
        $.subquery,
        $.cast,
        $.count,
        $.invocation,
        $.function_invocation,
        $.binary_expression,
        $.unary_expression,
        $.between_expression,
        $.refs_expression,
        $.parenthesized_expression,
      )
    ),

    parenthesized_expression: $ => prec(2,
      wrapped_in_parenthesis($._expression)
    ),

    binary_expression: $ => choice(
      ...[
        ['+', 'binary_plus'],
        ['-', 'binary_plus'],
        ['*', 'binary_times'],
        ['/', 'binary_times'],
        ['=', 'binary_relation'],
        ['<', 'binary_relation'],
        ['<=', 'binary_relation'],
        ['>=', 'binary_relation'],
        ['>', 'binary_relation'],
        ['<>', 'binary_relation'],
        [$.keyword_is, 'binary_is'],
        [$.is_not, 'binary_is'],
        [$.keyword_like, 'pattern_matching'],
        [$.not_like, 'pattern_matching'],
      ].map(([operator, precedence]) =>
        // @ts-ignore
        prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression)
        ))
      ),
      ...[
        [$.keyword_and, 'clause_connective'],
        [$.keyword_or, 'clause_disjunctive'],
      ].map(([operator, precedence]) =>
        // @ts-ignore
        prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression)
        ))
      ),
      ...[
        [$.keyword_in, 'binary_in'],
        [$.not_in, 'binary_in'],
      ].map(([operator, precedence]) =>
        // @ts-ignore
        prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', choice($.list, $.subquery))
        ))
      ),
    ),

    is_not: $ => prec.left(
      seq(
        $.keyword_is,
        $.keyword_not
      )
    ),

    not_like: $ => prec.left(
      seq(
        $.keyword_not,
        $.keyword_like
      )
    ),

    unary_expression: $ => prec.left('unary_not',
      seq(
        field('operator', $.keyword_not),
        field('operand', $._expression),
      )
    ),

    cast: $ => seq(
      field('name', $.keyword_cast),
      wrapped_in_parenthesis(
        seq(
          field('parameter', $._expression),
          $.keyword_as,
          $._type,
        ),
      ),
    ),

    _type: $ => choice(
      $.string,
      $.number,
      $.keyword_date,
      $.keyword_boolean,
    ),

    case: $ => seq(
      $.keyword_case,
      choice(
        // simplified CASE x WHEN
        seq(
          $._expression,
          $.keyword_when,
          $._expression,
          $.keyword_then,
          $._expression,
          repeat(
            seq(
              $.keyword_when,
              $._expression,
              $.keyword_then,
              $._expression,
            )
          ),
        ),
        // standard CASE WHEN x, where x must be a predicate
        seq(
          $.keyword_when,
          $._expression,
          $.keyword_then,
          $._expression,
          repeat(
            seq(
              $.keyword_when,
              $._expression,
              $.keyword_then,
              $._expression,
            )
          ),
        ),
      ),
      optional(
        seq(
          $.keyword_else,
          $._expression,
        )
      ),
      $.keyword_end,
    ),

    literal: $ => prec(2,
      choice(
        $._natural_number,
        $._decimal_number,
        $._literal_string,
        $.keyword_true,
        $.keyword_false,
        $.keyword_null,
      ),
    ),

    _literal_string: _ => /"(""|[^"])*"/,

    _natural_number: _ => seq(
      optional("-"),
      /\d+/
    ),

    _decimal_number: _ => seq(
      optional(
        choice("-", "+")),
      /((\d+(_\d+)*)?[.]\d+(_\d+)*(e[+-]?\d+(_\d+)*)?)|(\d+(_\d+)*[.](e[+-]?\d+(_\d+)*)?)/
    ),

    all_fields: $ => seq(
      repeat(
        $._object_reference_parent,
      ),
      '*',
    ),

    field: $ => seq(
      repeat(
        $._object_reference_parent,
      ),
      field('name', $.identifier),
    ),

    //TODO object reference should be with optional multiple parents
    object_reference: $ => field('name', $.identifier),

    _object_reference_parent: $ => seq(
      $.object_reference,
      '.',
    ),

    keyword_select: _ => make_keyword_en_ru("select", "выбрать"),
    keyword_distinct: _ => make_keyword_en_ru("distinct", "различные"),
    keyword_true: _ => make_keyword_en_ru("true", "истина"),
    keyword_as: _ => make_keyword_en_ru("as", "как"),
    keyword_not: _ => make_keyword_en_ru("not", "не"),
    keyword_and: _ => make_keyword_en_ru("and", "и"),
    keyword_or: _ => make_keyword_en_ru("or", "или"),
    keyword_is: _ => make_keyword_en_ru("is", "есть"),
    keyword_like: _ => make_keyword_en_ru("like", "подобно"),
    keyword_from: _ => make_keyword_en_ru("from", "из"),
    keyword_where: _ => make_keyword_en_ru("where", "где"),
    keyword_cast: _ => make_keyword_en_ru("cast", "выразить"),
    keyword_case: _ => make_keyword_en_ru("case", "выбор"),
    keyword_when: _ => make_keyword_en_ru("when", "когда"),
    keyword_then: _ => make_keyword_en_ru("then", "тогда"),
    keyword_else: _ => make_keyword_en_ru("else", "иначе"),
    keyword_end: _ => make_keyword_en_ru("end", "конец"),
    keyword_null: _ => make_keyword("null"),
    identifier: $ => $._identifier,

    _identifier: _ => /[a-zA-Zа-яА-ЯіІїЇєЄґҐщЩЁё_][0-9a-zA-Zа-яА-ЯіІїЇєЄґҐщЩЁё_]*/,

    comment: _ => /\/\/.*/,

    //types
