test/corpus/casting.txt
================================================================================
Standard cast
================================================================================

SELECT CAST(1 AS STRING);

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (cast
            (keyword_cast)
            (literal)
            (keyword_as)
            (keyword_text)))))))

================================================================================
Aliased
================================================================================

SELECT CAST(1 AS STRING) AS fieldname;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (cast
            name: (keyword_cast)
            parameter: (literal)
            (keyword_as)
            (keyword_text))
          (keyword_as)
          alias: (identifier))))))

================================================================================
Casts /w precision
================================================================================

SELECT
CAST (100 AS NUMBER(32)),

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (cast
            name: (keyword_cast)
            parameter: (literal)
            (keyword_as)
            (numeric
              (keyword_numeric)
              precision: (literal))))
        (term
          value: (cast
            (literal)
            (float
              (keyword_float)
              precision: (literal))))
        (term
          value: (cast
            (literal)
            (double)))))))
