test/corpus/comment.txt
================================================================================
Can parse comments
================================================================================

// hello
SELECT 1;

--------------------------------------------------------------------------------

(program
  (comment)
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (literal))))))

================================================================================
Can parse comments anywhere...
================================================================================

// hello
SELECT 1; //hi
//hi

--------------------------------------------------------------------------------

(program
  (comment)
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (literal)))))
  (comment)
  (comment))

================================================================================
...including between statements
================================================================================

// hello
SELECT 1; //hi
// hi again
SELECT 2;

--------------------------------------------------------------------------------

(program
  (comment)
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (literal)))))
  (comment)
  (comment)
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (literal))))))

================================================================================
Comment inside string literal
================================================================================

SELECT "// foo" FROM bar;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (literal))))
    (from
      (keyword_from)
      (relation
        (object_reference
          (identifier))))))

================================================================================
Empty comment
================================================================================

//
SELECT 1;

--------------------------------------------------------------------------------

(program
  (comment)
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (literal))))))
